@@ -3,7 +3,8 @@
 2007-06-28	Ivan Y. Khvostishkov
 
 	* main/Utils/: HttpContentType.class.php,
-	DoctypeDeclaration.class.php: introduced.
+	DoctypeDeclaration.class.php, CommonDoctypeDeclaration.class.php:
+	introduced.
 
 2007-06-28	Denis M. Gabaidulin
 
